# macroni

./: .gitignore  LICENSE.txt  Makefile  README.md  coordinates_cache.json  input_handler.py  macroni-0.0.1.vsix  macroni-0.0.2.vsix  macroni_debugger.py  macroni_interpret.py  main.macroni  mouse_utils.py  ocr.py  output_handler.py  pixel_colors_cache.json  pyproject.toml  requirements.txt  template_match.py  test.macroni  vision.py
docs/: FUNCTIONS.md  LANGUAGE.md  TEMPLATE_MATCHING.md
examples/: README.md  automated_login.macroni  click_button.macroni  interactive_setup.macroni  pixel_monitor.macroni  random_clicks.macroni  record_replay.macroni
extension/macroni/: language-configuration.json
extension/macroni/syntaxes/: macroni.tmLanguage.json
macroni/: cli.py
macroni/extension/macroni/: macroni-0.0.1.vsix  package.json
macroni/extension/macroni/snippets/: macroni.json
macroni/interpreter/: grammar.py  macroni_debugger.py  macroni_interpret.py  types.py
macroni/util/: input_handler.py  mouse_utils.py  ocr.py  output_handler.py  template_match.py  vision.py
scripts/: bootstrap.sh
syntax/macroni/: README.md  package.json
tests/: README.md  test_arithmetic.macroni  test_assignments.macroni  test_builtin_funcs.macroni  test_comparisons.macroni  test_conditionals.macroni  test_edge_cases.macroni  test_functions.macroni  test_import_helper.macroni  test_imports.macroni  test_lists.macroni  test_logical.macroni  test_loops.macroni  test_scope.macroni  test_tuples.macroni
util/: template_match.py
(+1 files in other folders)
