[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macroni"
version = "0.2.1"
description = "Macroni interpreter"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Sam Schreiber" }
]

dependencies = [
  "click>=8.3",
  "easyocr>=1.7.2",
  "lark>=1.3.1",
  "mss>=10.1.0",
  "opencv-python>=4.12.0.88",
  "pillow>=12.0.0",
  "pyautogui>=0.9.54",
  "pyscreeze>=1.0.1",
  "pynput>=1.8.1",
  "pyreadline3>=3.5.4"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]
keywords = ["dsl", "automation", "macro", "opencv", "ocr", "macroni"]

[project.urls]
Homepage = "https://github.com/srschreiber/macroni"
Issues = "https://github.com/srschreiber/macroni/issues"

[project.scripts]
macroni = "macroni.cli:main"